syntax = "proto3";
package rpc;

option go_package = "github.com/harness/gitness/gitrpc/rpc";

message FileUpload{
  oneof data {
    FileUploadHeader header = 1;
    Chunk chunk             = 2;
  }
}

message FileUploadHeader {
  string path = 1;
}

message Chunk {
  bool eof   = 1;
  bytes data = 2;
}

enum SortOrder {
  Default = 0;
  Asc     = 1;
  Desc    = 2;
}